fixed wrapping of popup content

--- a/WebContent/css/popup_newStyle.css
+++ b/WebContent/css/popup_newStyle.css
@@ -53,7 +53,7 @@
 .assetSmallererParent
 {
 	display:-webkit-flex;
-	display:flex;.contentHolder
+	display:flex;.contentHolder;
 	/*flex-direction: row;*/
 	/*justify-content:flex-start;*/
 	flex-wrap:wrap;
